project('OpusRec', 'cpp')


# TODO: Use subprojects.
# subproject('docopt')

# Docopt
docopt_src = [
    'docopt/docopt.cpp',
	'docopt/docopt.h',
	'docopt/docopt_private.h',
	'docopt/docopt_util.h',
	'docopt/docopt_value.h',
]

docopt_inc = include_directories('docopt')
docopt_lib = library('docopt', docopt_src)
docopt = declare_dependency(link_with: docopt_lib, include_directories: docopt_inc)

# libsoundio
libsoundio_src = [
    'libsoundio/soundio/endian.h',
	'libsoundio/soundio/soundio.h',
	'libsoundio/src/atomics.h',
	'libsoundio/src/channel_layout.c',
	'libsoundio/src/dummy.c',
	'libsoundio/src/dummy.h',
	'libsoundio/src/list.h',
	'libsoundio/src/os.c',
	'libsoundio/src/os.h',
	'libsoundio/src/ring_buffer.c',
	'libsoundio/src/ring_buffer.h',
	'libsoundio/src/soundio.c',
	'libsoundio/src/soundio_internal.h',
	'libsoundio/src/soundio_private.h',
	'libsoundio/src/util.c',
	'libsoundio/src/util.h',
	'libsoundio/src/wasapi.c',
	'libsoundio/src/wasapi.h',
]

libsoundio_inc = include_directories('libsoundio')
libsoundio_lib = library('libsoundio', libsoundio_src)
libsoundio = declare_dependency(link_with: libsoundio_lib, include_directories: libsoundio_inc)


# libwebm
libwebm_src = [
    'libwebm/webm_parser/include/webm/buffer_reader.h',
	'libwebm/webm_parser/include/webm/callback.h',
	'libwebm/webm_parser/include/webm/dom_types.h',
	'libwebm/webm_parser/include/webm/element.h',
	'libwebm/webm_parser/include/webm/file_reader.h',
	'libwebm/webm_parser/include/webm/id.h',
	'libwebm/webm_parser/include/webm/istream_reader.h',
	'libwebm/webm_parser/include/webm/reader.h',
	'libwebm/webm_parser/include/webm/status.h',
	'libwebm/webm_parser/include/webm/webm_parser.h',
	'libwebm/webm_parser/src/ancestory.cc',
	'libwebm/webm_parser/src/ancestory.h',
	'libwebm/webm_parser/src/audio_parser.h',
	'libwebm/webm_parser/src/bit_utils.cc',
	'libwebm/webm_parser/src/bit_utils.h',
	'libwebm/webm_parser/src/block_additions_parser.h',
	'libwebm/webm_parser/src/block_group_parser.h',
	'libwebm/webm_parser/src/block_header_parser.cc',
	'libwebm/webm_parser/src/block_header_parser.h',
	'libwebm/webm_parser/src/block_more_parser.h',
	'libwebm/webm_parser/src/block_parser.cc',
	'libwebm/webm_parser/src/block_parser.h',
	'libwebm/webm_parser/src/bool_parser.h',
	'libwebm/webm_parser/src/buffer_reader.cc',
	'libwebm/webm_parser/src/byte_parser.h',
	'libwebm/webm_parser/src/callback.cc',
	'libwebm/webm_parser/src/chapter_atom_parser.h',
	'libwebm/webm_parser/src/chapter_display_parser.h',
	'libwebm/webm_parser/src/chapters_parser.h',
	'libwebm/webm_parser/src/cluster_parser.h',
	'libwebm/webm_parser/src/colour_parser.h',
	'libwebm/webm_parser/src/content_enc_aes_settings_parser.h',
	'libwebm/webm_parser/src/content_encoding_parser.h',
	'libwebm/webm_parser/src/content_encodings_parser.h',
	'libwebm/webm_parser/src/content_encryption_parser.h',
	'libwebm/webm_parser/src/cue_point_parser.h',
	'libwebm/webm_parser/src/cue_track_positions_parser.h',
	'libwebm/webm_parser/src/cues_parser.h',
	'libwebm/webm_parser/src/date_parser.cc',
	'libwebm/webm_parser/src/date_parser.h',
	'libwebm/webm_parser/src/ebml_parser.h',
	'libwebm/webm_parser/src/edition_entry_parser.h',
	'libwebm/webm_parser/src/element_parser.h',
	'libwebm/webm_parser/src/file_reader.cc',
	'libwebm/webm_parser/src/float_parser.cc',
	'libwebm/webm_parser/src/float_parser.h',
	'libwebm/webm_parser/src/id_element_parser.cc',
	'libwebm/webm_parser/src/id_element_parser.h',
	'libwebm/webm_parser/src/id_parser.cc',
	'libwebm/webm_parser/src/id_parser.h',
	'libwebm/webm_parser/src/info_parser.h',
	'libwebm/webm_parser/src/int_parser.h',
	'libwebm/webm_parser/src/istream_reader.cc',
	'libwebm/webm_parser/src/master_parser.cc',
	'libwebm/webm_parser/src/master_parser.h',
	'libwebm/webm_parser/src/master_value_parser.h',
	'libwebm/webm_parser/src/mastering_metadata_parser.h',
	'libwebm/webm_parser/src/parser.h',
	'libwebm/webm_parser/src/parser_utils.cc',
	'libwebm/webm_parser/src/parser_utils.h',
	'libwebm/webm_parser/src/projection_parser.h',
	'libwebm/webm_parser/src/recursive_parser.h',
	'libwebm/webm_parser/src/seek_head_parser.h',
	'libwebm/webm_parser/src/seek_parser.h',
	'libwebm/webm_parser/src/segment_parser.cc',
	'libwebm/webm_parser/src/segment_parser.h',
	'libwebm/webm_parser/src/simple_tag_parser.h',
	'libwebm/webm_parser/src/size_parser.cc',
	'libwebm/webm_parser/src/size_parser.h',
	'libwebm/webm_parser/src/skip_callback.h',
	'libwebm/webm_parser/src/skip_parser.cc',
	'libwebm/webm_parser/src/skip_parser.h',
	'libwebm/webm_parser/src/slices_parser.h',
	'libwebm/webm_parser/src/tag_parser.h',
	'libwebm/webm_parser/src/tags_parser.h',
	'libwebm/webm_parser/src/targets_parser.h',
	'libwebm/webm_parser/src/time_slice_parser.h',
	'libwebm/webm_parser/src/track_entry_parser.h',
	'libwebm/webm_parser/src/tracks_parser.h',
	'libwebm/webm_parser/src/unknown_parser.cc',
	'libwebm/webm_parser/src/unknown_parser.h',
	'libwebm/webm_parser/src/var_int_parser.cc',
	'libwebm/webm_parser/src/var_int_parser.h',
	'libwebm/webm_parser/src/video_parser.h',
	'libwebm/webm_parser/src/virtual_block_parser.cc',
	'libwebm/webm_parser/src/virtual_block_parser.h',
	'libwebm/webm_parser/src/void_parser.cc',
	'libwebm/webm_parser/src/void_parser.h',
	'libwebm/webm_parser/src/webm_parser.cc',
	'libwebm/mkvparser/mkvparser.cc',
	'libwebm/mkvparser/mkvparser.h',
	'libwebm/mkvparser/mkvreader.cc',
	'libwebm/mkvparser/mkvreader.h',
	'libwebm/common/webmids.h',
	'libwebm/mkvmuxer/mkvmuxer.cc',
	'libwebm/mkvmuxer/mkvmuxer.h',
	'libwebm/mkvmuxer/mkvmuxertypes.h',
	'libwebm/mkvmuxer/mkvmuxerutil.cc',
	'libwebm/mkvmuxer/mkvmuxerutil.h',
	'libwebm/mkvmuxer/mkvwriter.cc',
	'libwebm/mkvmuxer/mkvwriter.h',
]

libwebm_inc = include_directories('libwebm')
libwebm_lib = library('libwebm', libwebm_src)
libwebm = declare_dependency(link_with: libwebm_lib, include_directories: libwebm_inc)


# opus
opus_src = [
    'opus/include/opus.h',
	'opus/include/opus_multistream.h',
	'opus/src/opus_private.h',
	'opus/src/analysis.h',
	'opus/src/mlp.h',
	'opus/src/tansig_table.h',
	'opus/src/opus.c',
	'opus/src/opus_decoder.c',
	'opus/src/opus_encoder.c',
	'opus/src/opus_multistream.c',
	'opus/src/opus_multistream_encoder.c',
	'opus/src/opus_multistream_decoder.c',
	'opus/src/repacketizer.c',
	'opus/src/analysis.c',
	'opus/src/mlp.c',
	'opus/src/mlp_data.c',
	'opus/silk/debug.h',
	'opus/silk/control.h',
	'opus/silk/errors.h',
	'opus/silk/API.h',
	'opus/silk/typedef.h',
	'opus/silk/define.h',
	'opus/silk/main.h',
	'opus/silk/x86/main_sse.h',
	'opus/silk/PLC.h',
	'opus/silk/structs.h',
	'opus/silk/tables.h',
	'opus/silk/tuning_parameters.h',
	'opus/silk/Inlines.h',
	'opus/silk/MacroCount.h',
	'opus/silk/MacroDebug.h',
	'opus/silk/macros.h',
	'opus/silk/NSQ.h',
	'opus/silk/pitch_est_defines.h',
	'opus/silk/resampler_private.h',
	'opus/silk/resampler_rom.h',
	'opus/silk/resampler_structs.h',
	'opus/silk/SigProc_FIX.h',
	'opus/silk/x86/SigProc_FIX_sse.h',
	'opus/silk/arm/biquad_alt_arm.h',
	'opus/silk/arm/LPC_inv_pred_gain_arm.h',
	'opus/silk/arm/macros_armv4.h',
	'opus/silk/arm/macros_armv5e.h',
	'opus/silk/arm/macros_arm64.h',
	'opus/silk/arm/SigProc_FIX_armv4.h',
	'opus/silk/arm/SigProc_FIX_armv5e.h',
	'opus/silk/arm/NSQ_del_dec_arm.h',
	'opus/silk/arm/NSQ_neon.h',
	'opus/silk/fixed/main_FIX.h',
	'opus/silk/fixed/structs_FIX.h',
	'opus/silk/fixed/arm/warped_autocorrelation_FIX_arm.h',
	'opus/silk/fixed/mips/noise_shape_analysis_FIX_mipsr1.h',
	'opus/silk/fixed/mips/warped_autocorrelation_FIX_mipsr1.h',
	'opus/silk/float/main_FLP.h',
	'opus/silk/float/structs_FLP.h',
	'opus/silk/float/SigProc_FLP.h',
	'opus/silk/mips/macros_mipsr1.h',
	'opus/silk/mips/NSQ_del_dec_mipsr1.h',
	'opus/silk/mips/sigproc_fix_mipsr1.h',
	'opus/silk/CNG.c',
	'opus/silk/code_signs.c',
	'opus/silk/init_decoder.c',
	'opus/silk/decode_core.c',
	'opus/silk/decode_frame.c',
	'opus/silk/decode_parameters.c',
	'opus/silk/decode_indices.c',
	'opus/silk/decode_pulses.c',
	'opus/silk/decoder_set_fs.c',
	'opus/silk/dec_API.c',
	'opus/silk/enc_API.c',
	'opus/silk/encode_indices.c',
	'opus/silk/encode_pulses.c',
	'opus/silk/gain_quant.c',
	'opus/silk/interpolate.c',
	'opus/silk/LP_variable_cutoff.c',
	'opus/silk/NLSF_decode.c',
	'opus/silk/NSQ.c',
	'opus/silk/NSQ_del_dec.c',
	'opus/silk/PLC.c',
	'opus/silk/shell_coder.c',
	'opus/silk/tables_gain.c',
	'opus/silk/tables_LTP.c',
	'opus/silk/tables_NLSF_CB_NB_MB.c',
	'opus/silk/tables_NLSF_CB_WB.c',
	'opus/silk/tables_other.c',
	'opus/silk/tables_pitch_lag.c',
	'opus/silk/tables_pulses_per_block.c',
	'opus/silk/VAD.c',
	'opus/silk/control_audio_bandwidth.c',
	'opus/silk/quant_LTP_gains.c',
	'opus/silk/VQ_WMat_EC.c',
	'opus/silk/HP_variable_cutoff.c',
	'opus/silk/NLSF_encode.c',
	'opus/silk/NLSF_VQ.c',
	'opus/silk/NLSF_unpack.c',
	'opus/silk/NLSF_del_dec_quant.c',
	'opus/silk/process_NLSFs.c',
	'opus/silk/stereo_LR_to_MS.c',
	'opus/silk/stereo_MS_to_LR.c',
	'opus/silk/check_control_input.c',
	'opus/silk/control_SNR.c',
	'opus/silk/init_encoder.c',
	'opus/silk/control_codec.c',
	'opus/silk/A2NLSF.c',
	'opus/silk/ana_filt_bank_1.c',
	'opus/silk/biquad_alt.c',
	'opus/silk/bwexpander_32.c',
	'opus/silk/bwexpander.c',
	'opus/silk/debug.c',
	'opus/silk/decode_pitch.c',
	'opus/silk/inner_prod_aligned.c',
	'opus/silk/lin2log.c',
	'opus/silk/log2lin.c',
	'opus/silk/LPC_analysis_filter.c',
	'opus/silk/LPC_inv_pred_gain.c',
	'opus/silk/table_LSF_cos.c',
	'opus/silk/NLSF2A.c',
	'opus/silk/NLSF_stabilize.c',
	'opus/silk/NLSF_VQ_weights_laroia.c',
	'opus/silk/pitch_est_tables.c',
	'opus/silk/resampler.c',
	'opus/silk/resampler_down2_3.c',
	'opus/silk/resampler_down2.c',
	'opus/silk/resampler_private_AR2.c',
	'opus/silk/resampler_private_down_FIR.c',
	'opus/silk/resampler_private_IIR_FIR.c',
	'opus/silk/resampler_private_up2_HQ.c',
	'opus/silk/resampler_rom.c',
	'opus/silk/sigm_Q15.c',
	'opus/silk/sort.c',
	'opus/silk/sum_sqr_shift.c',
	'opus/silk/stereo_decode_pred.c',
	'opus/silk/stereo_encode_pred.c',
	'opus/silk/stereo_find_predictor.c',
	'opus/silk/stereo_quant_pred.c',
	'opus/silk/LPC_fit.c',
	'opus/silk/x86/NSQ_sse.c',
	'opus/silk/x86/NSQ_del_dec_sse.c',
	'opus/silk/x86/x86_silk_map.c',
	'opus/silk/x86/VAD_sse.c',
	'opus/silk/x86/VQ_WMat_EC_sse.c',
	'opus/silk/float/apply_sine_window_FLP.c',
	'opus/silk/float/corrMatrix_FLP.c',
	'opus/silk/float/encode_frame_FLP.c',
	'opus/silk/float/find_LPC_FLP.c',
	'opus/silk/float/find_LTP_FLP.c',
	'opus/silk/float/find_pitch_lags_FLP.c',
	'opus/silk/float/find_pred_coefs_FLP.c',
	'opus/silk/float/LPC_analysis_filter_FLP.c',
	'opus/silk/float/LTP_analysis_filter_FLP.c',
	'opus/silk/float/LTP_scale_ctrl_FLP.c',
	'opus/silk/float/noise_shape_analysis_FLP.c',
	'opus/silk/float/process_gains_FLP.c',
	'opus/silk/float/regularize_correlations_FLP.c',
	'opus/silk/float/residual_energy_FLP.c',
	'opus/silk/float/warped_autocorrelation_FLP.c',
	'opus/silk/float/wrappers_FLP.c',
	'opus/silk/float/autocorrelation_FLP.c',
	'opus/silk/float/burg_modified_FLP.c',
	'opus/silk/float/bwexpander_FLP.c',
	'opus/silk/float/energy_FLP.c',
	'opus/silk/float/inner_product_FLP.c',
	'opus/silk/float/k2a_FLP.c',
	'opus/silk/float/LPC_inv_pred_gain_FLP.c',
	'opus/silk/float/pitch_analysis_core_FLP.c',
	'opus/silk/float/scale_copy_vector_FLP.c',
	'opus/silk/float/scale_vector_FLP.c',
	'opus/silk/float/schur_FLP.c',
	'opus/silk/float/sort_FLP.c',
	'opus/celt/arch.h',
	'opus/celt/bands.h',
	'opus/celt/celt.h',
	'opus/celt/cpu_support.h',
	'opus/include/opus_types.h',
	'opus/include/opus_defines.h',
	'opus/include/opus_custom.h',
	'opus/celt/cwrs.h',
	'opus/celt/ecintrin.h',
	'opus/celt/entcode.h',
	'opus/celt/entdec.h',
	'opus/celt/entenc.h',
	'opus/celt/fixed_debug.h',
	'opus/celt/fixed_generic.h',
	'opus/celt/float_cast.h',
	'opus/celt/_kiss_fft_guts.h',
	'opus/celt/kiss_fft.h',
	'opus/celt/laplace.h',
	'opus/celt/mathops.h',
	'opus/celt/mdct.h',
	'opus/celt/mfrngcod.h',
	'opus/celt/modes.h',
	'opus/celt/os_support.h',
	'opus/celt/pitch.h',
	'opus/celt/celt_lpc.h',
	'opus/celt/x86/celt_lpc_sse.h',
	'opus/celt/quant_bands.h',
	'opus/celt/rate.h',
	'opus/celt/stack_alloc.h',
	'opus/celt/vq.h',
	'opus/celt/static_modes_float.h',
	'opus/celt/static_modes_fixed.h',
	'opus/celt/static_modes_float_arm_ne10.h',
	'opus/celt/static_modes_fixed_arm_ne10.h',
	'opus/celt/arm/armcpu.h',
	'opus/celt/arm/fixed_armv4.h',
	'opus/celt/arm/fixed_armv5e.h',
	'opus/celt/arm/fixed_arm64.h',
	'opus/celt/arm/kiss_fft_armv4.h',
	'opus/celt/arm/kiss_fft_armv5e.h',
	'opus/celt/arm/pitch_arm.h',
	'opus/celt/arm/fft_arm.h',
	'opus/celt/arm/mdct_arm.h',
	'opus/celt/mips/celt_mipsr1.h',
	'opus/celt/mips/fixed_generic_mipsr1.h',
	'opus/celt/mips/kiss_fft_mipsr1.h',
	'opus/celt/mips/mdct_mipsr1.h',
	'opus/celt/mips/pitch_mipsr1.h',
	'opus/celt/mips/vq_mipsr1.h',
	'opus/celt/x86/pitch_sse.h',
	'opus/celt/x86/vq_sse.h',
	'opus/celt/x86/x86cpu.h',
	'opus/celt/bands.c',
	'opus/celt/celt.c',
	'opus/celt/celt_encoder.c',
	'opus/celt/celt_decoder.c',
	'opus/celt/cwrs.c',
	'opus/celt/entcode.c',
	'opus/celt/entdec.c',
	'opus/celt/entenc.c',
	'opus/celt/kiss_fft.c',
	'opus/celt/laplace.c',
	'opus/celt/mathops.c',
	'opus/celt/mdct.c',
	'opus/celt/modes.c',
	'opus/celt/pitch.c',
	'opus/celt/celt_lpc.c',
	'opus/celt/quant_bands.c',
	'opus/celt/rate.c',
	'opus/celt/vq.c',
	'opus/celt/x86/x86cpu.c',
	'opus/celt/x86/x86_celt_map.c',
	'opus/celt/x86/pitch_sse.c',
	'opus/celt/x86/pitch_sse2.c',
	'opus/celt/x86/vq_sse2.c',
	'opus/celt/x86/celt_lpc_sse.c',
	'opus/celt/x86/pitch_sse4_1.c',
]

opus_inc = include_directories('opus')
opus_lib = library('opus', opus_src)
opus = declare_dependency(link_with: opus_lib, include_directories: opus_inc)


# Main program.
opusrec_src = [
    'main.cpp',
	'config.h',
]

executable('opusrec', opusrec_src, dependencies: [docopt, libsoundio, libwebm, opus])
