project('libwebm', 'cpp', default_options: ['cpp_std=c++14'])

webm_parser_sources = [
	'libwebm/webm_parser/include/webm/buffer_reader.h',
	'libwebm/webm_parser/include/webm/callback.h',
	'libwebm/webm_parser/include/webm/dom_types.h',
	'libwebm/webm_parser/include/webm/element.h',
	'libwebm/webm_parser/include/webm/file_reader.h',
	'libwebm/webm_parser/include/webm/id.h',
	'libwebm/webm_parser/include/webm/istream_reader.h',
	'libwebm/webm_parser/include/webm/reader.h',
	'libwebm/webm_parser/include/webm/status.h',
	'libwebm/webm_parser/include/webm/webm_parser.h',
	'libwebm/webm_parser/src/ancestory.cc',
	'libwebm/webm_parser/src/ancestory.h',
	'libwebm/webm_parser/src/audio_parser.h',
	'libwebm/webm_parser/src/bit_utils.cc',
	'libwebm/webm_parser/src/bit_utils.h',
	'libwebm/webm_parser/src/block_additions_parser.h',
	'libwebm/webm_parser/src/block_group_parser.h',
	'libwebm/webm_parser/src/block_header_parser.cc',
	'libwebm/webm_parser/src/block_header_parser.h',
	'libwebm/webm_parser/src/block_more_parser.h',
	'libwebm/webm_parser/src/block_parser.cc',
	'libwebm/webm_parser/src/block_parser.h',
	'libwebm/webm_parser/src/bool_parser.h',
	'libwebm/webm_parser/src/buffer_reader.cc',
	'libwebm/webm_parser/src/byte_parser.h',
	'libwebm/webm_parser/src/callback.cc',
	'libwebm/webm_parser/src/chapter_atom_parser.h',
	'libwebm/webm_parser/src/chapter_display_parser.h',
	'libwebm/webm_parser/src/chapters_parser.h',
	'libwebm/webm_parser/src/cluster_parser.h',
	'libwebm/webm_parser/src/colour_parser.h',
	'libwebm/webm_parser/src/content_enc_aes_settings_parser.h',
	'libwebm/webm_parser/src/content_encoding_parser.h',
	'libwebm/webm_parser/src/content_encodings_parser.h',
	'libwebm/webm_parser/src/content_encryption_parser.h',
	'libwebm/webm_parser/src/cue_point_parser.h',
	'libwebm/webm_parser/src/cue_track_positions_parser.h',
	'libwebm/webm_parser/src/cues_parser.h',
	'libwebm/webm_parser/src/date_parser.cc',
	'libwebm/webm_parser/src/date_parser.h',
	'libwebm/webm_parser/src/ebml_parser.h',
	'libwebm/webm_parser/src/edition_entry_parser.h',
	'libwebm/webm_parser/src/element_parser.h',
	'libwebm/webm_parser/src/file_reader.cc',
	'libwebm/webm_parser/src/float_parser.cc',
	'libwebm/webm_parser/src/float_parser.h',
	'libwebm/webm_parser/src/id_element_parser.cc',
	'libwebm/webm_parser/src/id_element_parser.h',
	'libwebm/webm_parser/src/id_parser.cc',
	'libwebm/webm_parser/src/id_parser.h',
	'libwebm/webm_parser/src/info_parser.h',
	'libwebm/webm_parser/src/int_parser.h',
	'libwebm/webm_parser/src/istream_reader.cc',
	'libwebm/webm_parser/src/master_parser.cc',
	'libwebm/webm_parser/src/master_parser.h',
	'libwebm/webm_parser/src/master_value_parser.h',
	'libwebm/webm_parser/src/mastering_metadata_parser.h',
	'libwebm/webm_parser/src/parser.h',
	'libwebm/webm_parser/src/parser_utils.cc',
	'libwebm/webm_parser/src/parser_utils.h',
	'libwebm/webm_parser/src/projection_parser.h',
	'libwebm/webm_parser/src/recursive_parser.h',
	'libwebm/webm_parser/src/seek_head_parser.h',
	'libwebm/webm_parser/src/seek_parser.h',
	'libwebm/webm_parser/src/segment_parser.cc',
	'libwebm/webm_parser/src/segment_parser.h',
	'libwebm/webm_parser/src/simple_tag_parser.h',
	'libwebm/webm_parser/src/size_parser.cc',
	'libwebm/webm_parser/src/size_parser.h',
	'libwebm/webm_parser/src/skip_callback.h',
	'libwebm/webm_parser/src/skip_parser.cc',
	'libwebm/webm_parser/src/skip_parser.h',
	'libwebm/webm_parser/src/slices_parser.h',
	'libwebm/webm_parser/src/tag_parser.h',
	'libwebm/webm_parser/src/tags_parser.h',
	'libwebm/webm_parser/src/targets_parser.h',
	'libwebm/webm_parser/src/time_slice_parser.h',
	'libwebm/webm_parser/src/track_entry_parser.h',
	'libwebm/webm_parser/src/tracks_parser.h',
	'libwebm/webm_parser/src/unknown_parser.cc',
	'libwebm/webm_parser/src/unknown_parser.h',
	'libwebm/webm_parser/src/var_int_parser.cc',
	'libwebm/webm_parser/src/var_int_parser.h',
	'libwebm/webm_parser/src/video_parser.h',
	'libwebm/webm_parser/src/virtual_block_parser.cc',
	'libwebm/webm_parser/src/virtual_block_parser.h',
	'libwebm/webm_parser/src/void_parser.cc',
	'libwebm/webm_parser/src/void_parser.h',
	'libwebm/webm_parser/src/webm_parser.cc',
]

mkvparser_sources = [
	'libwebm/mkvparser/mkvparser.cc',
	'libwebm/mkvparser/mkvparser.h',
	'libwebm/mkvparser/mkvreader.cc',
	'libwebm/mkvparser/mkvreader.h',
	'libwebm/common/webmids.h',
]

mkvmuxer_sources = [
	'libwebm/mkvmuxer/mkvmuxer.cc',
	'libwebm/mkvmuxer/mkvmuxer.h',
	'libwebm/mkvmuxer/mkvmuxertypes.h',
	'libwebm/mkvmuxer/mkvmuxerutil.cc',
	'libwebm/mkvmuxer/mkvmuxerutil.h',
	'libwebm/mkvmuxer/mkvwriter.cc',
	'libwebm/mkvmuxer/mkvwriter.h',
	'libwebm/common/webmids.h',
]

libwebm_internal_inc = include_directories([
	'libwebm/webm_parser',
	'libwebm/webm_parser/include',
	'libwebm',
])
libwebm_inc = include_directories('libwebm/webm_parser/include')
libwebm_lib = static_library('libwebm', [webm_parser_sources, mkvparser_sources, mkvmuxer_sources], include_directories: libwebm_internal_inc)

libwebm = declare_dependency(link_with: libwebm_lib, include_directories: libwebm_inc)
